// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout resolvePercentHeight Should keep empty document untouched 1`] = `
{
  "children": [],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePercentHeight Should keep empty page untouched 1`] = `
{
  "children": [
    {
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePercentHeight Should not resolve children if page dont have height 1`] = `
{
  "children": [
    {
      "children": [
        {
          "style": {
            "height": "80%",
            "width": "60%",
          },
          "type": "VIEW",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolvePercentHeight Should resolve children percent dimensions if page have height 1`] = `
{
  "children": [
    {
      "children": [
        {
          "style": {
            "height": 800,
          },
          "type": "VIEW",
        },
      ],
      "style": {
        "height": 1000,
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
